the navbar slider and login page is done

--- a/src/sass/config/variables.scss
+++ b/src/sass/config/variables.scss
@@ -1,1 +1,5 @@
-$main-bg-clr: #663030;
+$main-bg-clr: #F4F4F6;
+$gray-color: #9F9F9F;
+$main-color: #1389FD;
+$black-color: #000;
+$white-color: #fff;
