activites section  done

--- a/src/sass/config/variables.scss
+++ b/src/sass/config/variables.scss
@@ -1,5 +1,6 @@
-$main-bg-clr: #F4F4F6;
+$main-bg-color: #F4F4F6;
 $gray-color: #9F9F9F;
+$gray-dark-color: #252525;
 $main-color: #1389FD;
 $black-color: #000;
 $white-color: #fff;
