--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -198,7 +198,11 @@ header {
         
         font-size: 22px;
         color: $gray-dark-color;
+        @media (max-width: 992px){
+            width: 80% !important;
+        }
     }
+
 
     h3 {
         color: $main-color;
@@ -233,8 +237,19 @@ header {
 
 .contact {
     background-color: $main-bg-color;
+    position: relative;
 
     i, span{
         color: $main-color;
+    }
+    iframe { // remove all pading in mobile version
+        @media (max-width: 768px){
+            width: 100% !important;
+            max-width: 100% !important;
+            position: absolute;
+            right: 0;
+
+
+        }
     }
 }
