--- a/src/sass/config/variables.scss
+++ b/src/sass/config/variables.scss
@@ -1,6 +1,8 @@
 $main-bg-color: #F4F4F6;
 $gray-color: #9F9F9F;
+$card-brder-color:#cccccc;
 $gray-dark-color: #252525;
 $main-color: #1389FD;
 $black-color: #000;
 $white-color: #fff;
+$golden:#FFA500;
