--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -212,7 +212,8 @@ header {
     }
 
     .card {
-        box-shadow: 4px 2px 4px 1px rgba(0, 0, 0, 0.1);
+        border-color: $card-brder-color;
+        
         background-color: $main-bg-color;
 
         h5 {
@@ -235,21 +236,67 @@ header {
     color: $main-color;
 }
 
+.star {
+    .start-title i:first-child, .start-title i:nth-child(2), .start-title i:nth-child(3) {
+        margin-right: 10px;
+        color: $golden;
+    }
+    
+    .start-title i:nth-last-child(1), .start-title i:nth-last-child(2), .start-title i:nth-last-child(3) {
+        margin-left: 10px; 
+        color: $golden;
+    }
+    .star-title {
+        margin-left:15px;
+        margin-right:15px;
+        
+    }
+    
+    .card-body {
+        background-color: $golden;
+        h5 {
+            color: $black-color;
+            font-size: 25px;
+            font-weight: 600;
+        }
+        p{
+            color: $gray-dark-color;
+            font-size: 20px;
+            
+
+        }
+        img{
+            border-bottom-left-radius: 0 !important;
+            border-bottom-right-radius: 0 !important;
+        }
+        .detalis-btn {
+            @include button($white-color, $gray-dark-color, $gray-dark-color );
+        }
+    }
+}
 .contact {
     background-color: $main-bg-color;
     position: relative;
 
+    h3{
+        color: $main-color;
+    }
     i, span{
         color: $main-color;
     }
-    iframe { // remove all pading in mobile version
+    iframe { 
+        
+        // remove all pading in mobile version
         @media (max-width: 768px){
             width: 100% !important;
             max-width: 100% !important;
             position: absolute;
             right: 0;
-
-
         }
     }
+}
+
+.copyright {
+    background-color: $gray-dark-color;
+    color: $gray-color;
 }
