--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -21,7 +21,7 @@
   padding: 20px;
   padding-top: 25px;
   box-shadow: #dddada 0px 0px 20px;
-  border: 1px solid $gray-color;
+  border: 1px solid $card-brder-color;
   border-top: none;
   border-radius: 5px;
   margin-bottom: 25px;
