--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,8 @@
 @import 'config/variables';
 @import 'config/mixins';
 @import 'config/swiper.scss';
+@import 'firstGrade.scss';
+@import 'secondGrade.scss';
 
 
 * {
