--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,11 +12,12 @@
 
 @import 'bootstrap/dist/css/bootstrap.rtl.min.css';
 @import '@fortawesome/fontawesome-free/css/all.min.css';
-@import 'config/variables';
+@import 'config/variables.scss';
 @import 'config/mixins';
 @import 'config/swiper.scss';
 @import 'firstGrade.scss';
 @import 'secondGrade.scss';
+
 
 
 * {
