--- a/src/sass/config/_mixins.scss
+++ b/src/sass/config/_mixins.scss
@@ -6,6 +6,7 @@
     padding: 5px 30px;
     text-decoration: none;
     transition: all .3s ease-in-out;
+
     &:hover {
         background-color: $color;
         color: $background-color;
@@ -13,3 +14,95 @@
     }
 }
 
+
+
+@mixin overlayStyle($overlayColor) {
+    .overlay {
+        background: rgba($overlayColor , 0.9);
+        width: 100%;
+        height: 450px;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        margin-bottom: 200px;
+    }
+}
+
+@mixin aboutStudent($fontcolor) {
+    .aboutStudent {
+        @media (max-width:768px) {
+            padding-top: 350px;
+        }
+        @media (max-width:576px) {
+            padding-top: 300px;
+
+        }
+        .aboutStudentTitle {
+            color: $fontcolor;
+
+            @media (max-width:768px) {
+                padding-top: 50px;
+            }
+        }
+    }
+}
+
+@mixin gradeTable ($fontcolor)
+{
+    .gradeTable {
+        margin-top: 25px;
+    
+        h2 {
+            color: $fontcolor;
+        }
+    }
+}
+
+@mixin howtobeFirst ($fontcolor)
+{
+    .howtobeFirst {
+        @media (max-width:768px) {
+            padding-top: 30px;
+        }
+    
+        .custom-accordion-header {
+            padding: 0.64rem 1rem;
+            font-size: 1rem;
+        }
+    
+        .accordion-button:not(.collapsed) {
+            box-shadow: none;
+            /* Removes the shadow */
+        }
+    
+        .accordion-button:not(.collapsed) {
+            background-color: $fontcolor;
+            color: white;
+        }
+    
+        //hide origila bs5 arrows
+        .accordion-button:not(.collapsed)::after {
+            /* Hide the default arrow */
+            display: none;
+        }
+    
+        .accordion-button:not(.collapsed) {
+            /* Add your own custom arrow icon */
+            position: relative;
+        }
+    
+        //add fa arrows
+        .accordion-button:not(.collapsed)::before {
+            /* Using FontAwesome icon */
+            content: "\f077";
+            /* FontAwesome arrow icon */
+            font-family: "FontAwesome";
+            position: absolute;
+            left: 1.25rem;
+            top: 50%;
+            transform: translateY(-50%);
+            color: white;
+            /* Set the color */
+        }
+    }
+}
